fixing icon alignment

--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -447,9 +447,14 @@ hr {
 small {
   display: inline;
 }
+
+.container {
+  
+}
 #icons {
   display: inline;
   padding-left: 920px;
+  float: inline-end;
 }
 .fa {
   padding: 10px;
